Change behavior of autocomplete search. Only those books are suggested that match their firsts letters with entered text. Also use a form tag to wrap input field and set form autocomplete attribute to false to prevent default input autocomplete behavoir. And style autocomplete suggestions by changing color and font weight ofmatched letters.

--- a/styles/components/searchBox.scss
+++ b/styles/components/searchBox.scss
@@ -31,7 +31,7 @@
             font-size: 18px;
             font-family: $font-family1;
             background-color: $pallate4;
-            color: $pallate1;
+            color: $pallate2;
             cursor: pointer;
             &:hover {
                 color: $pallate5;
@@ -39,6 +39,10 @@
             }
             &:active {
                 background-color: $pallate1;
+            }
+            span {
+                color: $pallate1;
+                font-weight: bold;
             }
         }
     }
